Minor changes for readability

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="title">Lisa Su</h1>
     <p>A transformative leader who revitalized AMD and revolutionized the semiconductor industry</p>
 
-    <div id="img-div">
+    <figure id="img-div">
       <img id="image" src="https://media.gettyimages.com/id/1454311939/photo/las-vegas-hosts-annual-ces-trade-show.jpg?b=1&s=594x594&w=0&k=20&c=PahBJtKlh2PnKViKKjtphCnQXOqRRrdIbQeHipdBcj8=" alt="Lisa Su at a tech conference">
       <figcaption id="img-caption">Lisa Su at a tech conference.</figcaption>
-    </div>
+    </figure>
 
     <section id="tribute-info">
       <h2 id="headline">A timeline of Lisa Su:</h2>
@@ -30,7 +30,7 @@
         <li><strong>2020</strong> - Announced AMD's acquisition of Xilinx for $35 billion, further solidifying the company's position in the semiconductor industry.</li>
         <li><strong>2021</strong> - Named one of the world's greatest leaders by Fortune and credited with turning AMD into a top competitor in the chip industry.</li>
       </ul>
-      <h3>More information on Lisa Su at this <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lisa_Su" target="_blank">Wikipedia entry</a>.</h3>
+      <h3>More information on Lisa Su at this <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lisa_Su" target="_blank" rel="noopener noreferrer">Wikipedia entry</a>.</h3>
     </section>
   </main>
 </body>
